<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="350dp"
             android:layout_height="675dp"
             android:background="@drawable/creation_fragment"
             android:orientation="vertical"
             tools:context=".EventCreationFragment"
             android:layout_gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/title"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/title_placeholder"
              android:textColorHint="@color/hint_color"
              android:textColor="@color/black"
              android:background="@drawable/rounded_edittext"
              android:padding="6dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="3dp"

              android:id="@+id/create_event_title"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/location"
            android:layout_marginLeft="20dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/location_placeholder"
              android:textColorHint="@color/theme_blue"
              android:textColor="@color/theme_blue"
              android:background="@drawable/rounded_edittext"
              android:padding="6dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="3dp"

              android:id="@+id/create_event_location"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/photos"
            android:layout_marginLeft="20dp"/>

    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="@string/select_photos"
              android:textColorHint="@color/hint_color"
              android:textColor="@color/black"
              android:background="@drawable/rounded_edittext"
              android:padding="6dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="3dp"

              android:id="@+id/create_event_photos"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/dates"
                android:layout_marginLeft="20dp"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <EditText android:layout_width="139dp"
                      android:layout_height="wrap_content"
                      android:hint="@string/start_date_placeholder"
                      android:textColorHint="@color/hint_color"
                      android:textColor="@color/black"
                      android:background="@drawable/rounded_edittext"
                      android:padding="6dp"
                      android:layout_marginLeft="20dp"
                      android:layout_marginRight="10dp"
                      android:layout_marginBottom="10dp"
                      android:layout_marginTop="3dp"

                      android:id="@+id/create_event_startdate"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/date_to_date"
                      android:textColor="@color/black"/>

            <EditText android:layout_width="139dp"
                      android:layout_height="wrap_content"
                      android:hint="@string/end_date_placeholder"
                      android:textColorHint="@color/hint_color"
                      android:textColor="@color/black"
                      android:background="@drawable/rounded_edittext"
                      android:padding="6dp"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:layout_marginBottom="10dp"
                      android:layout_marginTop="3dp"

                      android:id="@+id/create_event_enddate"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/description"
            android:layout_marginLeft="20dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="120dp"
              android:hint="@string/description_placeholder"
              android:textColorHint="@color/hint_color"
              android:textColor="@color/black"
              android:background="@drawable/rounded_edittext"
              android:gravity="top"
              android:padding="6dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="3dp"

              android:id="@+id/create_event_description"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/cost"
                    android:layout_marginLeft="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/add_to_journal"
                    android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/hint_color"
                      android:hint="@string/cost_placeholder"
                      android:textColor="@color/black"
                      android:background="@drawable/rounded_edittext"
                      android:padding="6dp"
                      android:layout_marginLeft="20dp"
                      android:layout_marginRight="10dp"
                      android:layout_marginBottom="10dp"
                      android:layout_marginTop="3dp"

                      android:id="@+id/create_event_cost"/>

        <!--Must be defined in code I think-->
            <Spinner android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:background="@drawable/rounded_edittext"
                     android:padding="6dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="3dp"

                     android:id="@+id/create_event_journal_spinner">
            </Spinner>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tags"
            android:layout_marginLeft="20dp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/tags_placeholder"
              android:textColorHint="@color/hint_color"
              android:textColor="@color/black"
              android:background="@drawable/rounded_edittext"
              android:padding="6dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="3dp"

              android:id="@+id/create_event_tags"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"
                  android:gravity="bottom|center_horizontal">
        <Button
                android:text="@string/cancel_button"
                android:layout_width="120dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/round_button_gray"
                android:textColor="@color/black"
                android:layout_height="wrap_content"

                android:id="@+id/create_event_submit"/>
        <Button
                android:text="@string/save_button"
                android:textAlignment="center"
                android:layout_width="120dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/round_button_blue"
                android:layout_height="wrap_content"

                android:id="@+id/create_event_cancel"/>
    </LinearLayout>

</LinearLayout>